WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82292
[BlackBerry] Text selection - selection gets broken in test.com/individuals.htm
https://bugs.webkit.org/show_bug.cgi?id=82292
Summary
[BlackBerry] Text selection - selection gets broken in test.com/individuals.htm
Sean Wang
Reported
2012-03-26 20:46:10 PDT
+++ This PR was initially created as a clone of PR #131791 +++ - load test.com/individuals.htm - start text selection from some text in the page, preferably text right bellow "popular searches: " - drag one of the anchors upward, so that it crosses the iframe ad at the top left , and drop the anchor on top of "for individuals looking for tests" image selection switches to the iframe (the ad), but the main frame selection still exists. Selection shouldn't cross frames.
Attachments
Patch
(5.16 KB, patch)
2012-03-27 01:02 PDT
,
Sean Wang
rwlbuis
: review+
Details
Formatted Diff
Diff
Patch 2, changed Reviewed by...
(5.23 KB, patch)
2012-03-27 19:12 PDT
,
Sean Wang
rwlbuis
: review-
Details
Formatted Diff
Diff
Patch 3, Change the reviewed by...
(5.25 KB, patch)
2012-03-27 19:47 PDT
,
Sean Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Sean Wang
Comment 1
2012-03-27 01:02:40 PDT
Created
attachment 133994
[details]
Patch
Rob Buis
Comment 2
2012-03-27 04:17:45 PDT
Comment on
attachment 133994
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=133994&action=review
Patch looks good. Because you filled in reviewed by I cant cq+, so please ask Leo or Charles for help to land this correctly, or re-upload with proper reviewed by line.
> Source/WebKit/blackberry/ChangeLog:8 > + Reviewed by Mike Fenton
This is wrong, you mean internally reviewed here.
Sean Wang
Comment 3
2012-03-27 19:12:09 PDT
Created
attachment 134201
[details]
Patch 2, changed Reviewed by...
Rob Buis
Comment 4
2012-03-27 19:22:33 PDT
Comment on
attachment 134201
[details]
Patch 2, changed Reviewed by... View in context:
https://bugs.webkit.org/attachment.cgi?id=134201&action=review
> Source/WebKit/blackberry/ChangeLog:10 > + Reviewed by Nobody.
This will likely still not work, you need "Reviewed by NOBODY (OOPS!)."
Sean Wang
Comment 5
2012-03-27 19:47:26 PDT
Created
attachment 134206
[details]
Patch 3, Change the reviewed by...
Rob Buis
Comment 6
2012-03-27 19:48:51 PDT
Comment on
attachment 134206
[details]
Patch 3, Change the reviewed by... Looks good.
WebKit Review Bot
Comment 7
2012-03-27 20:47:17 PDT
Comment on
attachment 134206
[details]
Patch 3, Change the reviewed by... Clearing flags on attachment: 134206 Committed
r112361
: <
http://trac.webkit.org/changeset/112361
>
WebKit Review Bot
Comment 8
2012-03-27 20:47:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug