[BlackBerry] Text selection - selection gets broken in test.com/individuals.htm https://bugs.webkit.org/show_bug.cgi?id=82292

Change to check and avoid text selection across frames.

Internal reviewed by Mike Fenton

Patch by Sean Wang <Xuewen.Wang@torchmobile.com.cn> on 2012-03-27
Reviewed by Rob Buis.

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::visiblePositionForPointIgnoringClipping):
    support selection across frames, so check if the *framePoint* is in
    the *frame*.
(BlackBerry::WebKit::SelectionHandler::setSelection):
    function returns a null VisablePosition, it stands for a invalid position
    or a position in the different frames, therefor we don't execute setting
    handle's position.

Canonical link: https://commits.webkit.org/99782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112361 268f45cc-cd09-0410-ab3c-d52691b4dbfc